# mdict-py

./: .gitignore  .pdm-python  Dockerfile  LICENSE  Pipfile  README.md  app.py  config.ini  config.py  es.py  file_util.py  main.py  mapping.json  mdict_query.py  mdx_server.py  mdx_util.py  pyproject.toml  readmdict.py  requirements.txt  ripemd128.py
ai/: __init__.py  dl_modles.py  translate.py
app/config/: __init__.py
app/es/: __init__.py  client.py  config.py  indexing.py
app/lucky/: __init__.py  freq_words.txt
app/mdict/: __init__.py  config.py  mdict_db.py  read_mdict.py
app/mdict/utils/: lzo.py  pureSalsa20.py  ripemd128.py
app/query/: __init__.py
es/: __init__.py  config.py  indexing.py
file_utils/: __init__.py
lucky/: __init__.py  freq_words.txt
mdict/: __init__.py  config.py  mdict_db.py  read_mdict.py
mdx/: __init__.py  config.py  index_builder.py  mdict_db.py  mdx_client.py  read_mdict.py  readmdict.py
mdx/utils/: lzo.py  pureSalsa20.py
query/: __init__.py
resources/mdx/: LSC4.mdx.db
resources/mdx/en/: LSC4.mdd.db  LSC4.mdx.db
resources/static/: LSC4.css  O8C.css  hycd_3rd.css  hycd_3rd.js  hycd_3rd_img.css  index.css  index.js  jquery.min.js
resources/templates/: home.html  index.html
src/: __init__.py  app.py  main.py
src/config/: __init__.py
src/es/: __init__.py  config.py  indexing.py
src/lucky/: __init__.py
src/mdict/: __init__.py  config.py  mdict_db.py  read_mdict.py
src/mdict/utils/: pureSalsa20.py
src/query/: __init__.py
static/: LSC4.css  hycd_3rd.css  hycd_3rd.js  hycd_3rd_img.css  index.css  index.html  index.js
staticfiles/: __init__.py
