[tool.poetry]
name = "mdict-py"
version = "0.1.0"
description = ""
authors = ["zhimoe"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litestar = "2.1.1"
pydantic = "2.4.1"
inflect = "7.0.0"
pyspellchecker = "0.7.2"
elasticsearch7 = "7.17.9"
beautifulsoup4 = "4.9.3"
jinja2 = "3.1.2"
#uvloop = "0.17.0"
#uvicorn = "0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"