# --- pdm start
[project]
name = "mdict-py"
version = "1.0"
description = ""
authors = [{ name = "zhimoe" }, ]

dependencies = [
    "litestar==2.8.0",
    "pydantic==2.6.4",
    "inflect==7.2.0",
    "pyspellchecker==0.8.1",
    "elasticsearch7==7.17.9",
    "beautifulsoup4==4.12.3",
    "jinja2==3.1.3",
    "uvicorn",
]

requires-python = "==3.12.2"

[[tool.pdm.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
verify_ssl = true

[tool.pdm]
distribution = false

[tool.pdm.build]
includes = []
# --- pdm end

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[tool.ruff]
line-length = 88
indent-width = 4
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
fixable = ["ALL"]
unfixable = ["B"]